--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,7 @@ keywords = "developer,programmer,web,golang,goa"
 github = "tchssk"
 twitter = "tchssk"
 medium = "@tchssk"
+gitlab = "tchssk"
 email = "tchsskk@gmail.com"
 
 ## Extras
