--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,7 @@ twitter = "tchssk"
 medium = "@tchssk"
 devto = "tchssk"
 gitlab = "tchssk"
+hackernews = "tchssk"
 email = "tchsskk@gmail.com"
 
 ## Extras
