--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ devto = "tchssk"
 gitlab = "tchssk"
 bitbucket = "tchssk"
 hackernews = "tchssk"
+youtube = "UCtvS5Hswkd6e8ATkvx9leRg"
 email = "tchsskk@gmail.com"
 
 ## Extras
