--- a/config.toml
+++ b/config.toml
@@ -36,6 +36,7 @@ gitlab = "tchssk"
 bitbucket = "tchssk"
 hackernews = "tchssk"
 youtube = "UCtvS5Hswkd6e8ATkvx9leRg"
+holopin = "@tchssk"
 email = "tchsskk@gmail.com"
 
 ## Extras
